--- a/layouts/partials/cards/project.html
+++ b/layouts/partials/cards/project.html
@@ -7,7 +7,7 @@
       <a class="card-header" href="{{ if .repo }}{{ .repo }}{{ else if .url }}{{ .url }}{{ else }}javascript:void(0){{ end }}" {{ if or .repo .url }}target="_blank"{{ end }}>
         <div>
           <div class="d-flex">
-            {{ if .logo }}
+            <!-- {{ if .logo }}
 
             {{ $logoImage:= resources.Get .logo}}
             {{ if $logoImage }}
@@ -15,7 +15,7 @@
 
             <img class="card-img-xs" src="{{ $logoImage.RelPermalink }}" alt="{{ .name }}" />
             {{ end }}
-            {{ end }}
+            {{ end }} -->
             <h5 class="card-title mb-0">{{ .name }}</h5>
           </div>
           <div class="sub-title">
