--- a/layouts/partials/navigators/navbar.html
+++ b/layouts/partials/navigators/navbar.html
@@ -36,7 +36,7 @@
 <nav class="navbar navbar-expand-xl top-navbar initial-navbar" id="top-navbar">
   <div class="container">
     <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}">
-      <img src="{{ $invertedLogo }}" id="logo" alt="Logo">
+      <!-- <img src="{{ $invertedLogo }}" id="logo" alt="Logo"> -->
       {{- site.Title -}}
     </a>
     <button
