--- a/layouts/partials/sections/experiences/single-position.html
+++ b/layouts/partials/sections/experiences/single-position.html
@@ -11,11 +11,16 @@
     </div>
     <!-- Add company overview -->
     <p>{{ .company.overview | markdownify }}</p>
-    <!-- Add the responsibilities handled at this position -->
-    <h6 class="text-muted">{{ i18n "responsibilities" }}</h6>
-    <ul class="justify-content-around">
-    {{ range $position.responsibilities }}
-        <li>{{ . | markdownify }}</li>
+    {{ if $position.specialization }}
+        <h6 class="text-muted"><b>{{ i18n "specialization" }} {{ $position.specialization | markdownify }}</b></h6>
     {{ end }}
-    </ul>
+    <!-- Add the responsibilities handled at this position -->
+    {{ if $position.responsibilities }}
+        <h6 class="text-muted">{{ i18n "responsibilities" }}</h6>
+        <ul class="justify-content-around">
+        {{ range $position.responsibilities }}
+            <li>{{ . | markdownify }}</li>
+        {{ end }}
+        </ul>
+    {{ end }}
 </div>
