--- a/layouts/partials/sections/home.html
+++ b/layouts/partials/sections/home.html
@@ -3,7 +3,7 @@
   {{ $author = (index site.Data site.Language.Lang).author }}
 {{ end }}
 
-{{ $name:="Kunal Jha" }}
+{{ $name:="Himangshu Shekhar Jha" }}
 {{ if $author.nickname }}
   {{ $name = $author.nickname }}
 {{ else if $author.name }}
