fix name and domain

--- a/layouts/partials/sections/home.html
+++ b/layouts/partials/sections/home.html
@@ -21,7 +21,7 @@
 {{ end }}
 
 
-{{ $authorImage:= "/images/kunal.jpeg" }}
+{{ $authorImage:= "/images/shekhar.jpeg" }}
 {{ if $author.image }}
   {{ $authorImage = $author.image }}
 {{ end }}
